# smartmatter

./: .gitignore  CMakeLists.txt  Cellular Automata Inter-process visualization-log.html  README  launch.sh  voreen-editor.sh
ext/tgt/: CMakeLists.txt  config.h
ext/tgt/dep/: CMakeCache.txt  Makefile  cmake_install.cmake
ext/tinyxml/: CMakeLists.txt
ext/tinyxml/dep/: CMakeCache.txt  Makefile  cmake_install.cmake
ext/voreen/: CMakeLists.txt  LICENSE-academic.txt  LICENSE.txt
ext/voreen/inc/voreen/core/: voreenapplication.h  voreenmodule.h
ext/voreen/inc/voreen/modules/: gen_moduleregistration.h  moduleregistration.h
ext/voreen/inc/voreen/qt/: aboutbox.h  helpbrowser.h  progressdialog.h  versionqt.h  voreenapplicationqt.h
ext/voreen/src/core/: version.cpp  voreenapplication.cpp  voreenmodule.cpp
ext/voreen/src/core/animation/: animatedprocessor.cpp  animation.cpp  interpolationfunction.cpp  interpolationfunctionbase.cpp  interpolationfunctionfactory.cpp  propertykeyvalue.cpp  serializationfactories.cpp  templatepropertytimeline.cpp  templatepropertytimelinestate.cpp
ext/voreen/src/core/datastructures/: imagesequence.cpp  rendertarget.cpp
ext/voreen/src/core/interaction/: camerainteractionhandler.cpp  firstpersonnavigation.cpp  flythroughnavigation.cpp  idmanager.cpp  interactionhandler.cpp  interactionhandlerfactory.cpp  pickingmanager.cpp  plotcamerainteractionhandler.cpp  plotpickingmanager.cpp  trackballnavigation.cpp  voreentrackball.cpp
ext/voreen/src/core/io/: brickedvolumereader.cpp  brickedvolumewriter.cpp  cache.cpp  cacheindex.cpp  datvolumereader.cpp  datvolumewriter.cpp  progressbar.cpp  rawvolumereader.cpp  textfilereader.cpp  vevovolumereader.cpp  visiblehumanreader.cpp  volumereader.cpp  volumeserializer.cpp  volumeserializerpopulator.cpp  volumewriter.cpp  zipvolumereader.cpp
ext/voreen/src/core/network/: networkconverter.cpp  networkevaluator.cpp  networkgraph.cpp  networkserializer.cpp  processornetwork.cpp  processornetworkobserver.cpp  workspace.cpp
ext/voreen/src/core/plotting/: aggregationfunction.cpp  aggregationfunctionfactory.cpp  colormap.cpp  functionlibrary.cpp  plotbase.cpp  plotcell.cpp  plotdata.cpp  plotentitysettings.cpp  plotexpression.cpp  plotfunction.cpp  plotlibrary.cpp  plotpredicate.cpp  plotpredicatefactory.cpp  plotrow.cpp  plotselection.cpp  smartlabel.cpp
ext/voreen/src/core/ports/: coprocessorport.cpp  plotport.cpp  port.cpp  renderport.cpp  textport.cpp  volumeport.cpp
ext/voreen/src/core/processors/: canvasrenderer.cpp  geometryrendererbase.cpp  imageprocessor.cpp  imageprocessordepth.cpp  processor.cpp  processorfactory.cpp  processorwidget.cpp  profiling.cpp  renderprocessor.cpp  volumeprocessor.cpp  volumeraycaster.cpp  volumerenderer.cpp
ext/voreen/src/core/properties/: boolproperty.cpp  buttonproperty.cpp  cameraproperty.cpp  colormapproperty.cpp  colorproperty.cpp  condition.cpp  eventproperty.cpp  filedialogproperty.cpp  floatproperty.cpp  fontproperty.cpp  intproperty.cpp  lightproperty.cpp  matrixproperty.cpp  numericproperty.cpp  optionproperty.cpp  plotdataproperty.cpp  plotentitiesproperty.cpp  plotpredicateproperty.cpp  plotselectionproperty.cpp  property.cpp  propertyowner.cpp  propertyvector.cpp  shaderproperty.cpp  stringproperty.cpp  transfuncproperty.cpp  vectorproperty.cpp  volumecollectionproperty.cpp  volumehandleproperty.cpp  volumestreamproperty.cpp
ext/voreen/src/core/utils/: observer.cpp  stringconversion.cpp  voreenpainter.cpp
ext/voreen/src/modules/base/: basemodule.cpp
ext/voreen/src/modules/ca/: camodule.cpp  cavolumeprocessor.cpp
ext/voreen/src/modules/coat/: coatmodule.cpp
ext/voreen/src/modules/connectedcomponents/: connectedcomponents2d.cpp  connectedcomponents3d.cpp  connectedcomponentsmodule.cpp
ext/voreen/src/modules/dicom/: dicommodule.cpp  dicomvolumereader.cpp  dicomvolumewriter.cpp
ext/voreen/src/modules/flowreen/: colorcodingability.cpp  flow2d.cpp  flow3d.cpp  flowmagnitudes3d.cpp  flowmath.cpp  floworthogonalslicerenderer.cpp  flowreader.cpp  flowreenmodule.cpp  flowreenprocessor.cpp  flowslicerenderer.cpp  flowslicerenderer2d.cpp  flowslicerenderer3d.cpp  flowstreamlinestexture3d.cpp  pathlinerenderer3d.cpp  simpletexture.cpp  streamlinerenderer3d.cpp  streamlinetexture.cpp  volumeflow3d.cpp  volumeoperatorflowmagnitude.cpp  volumeoperatorintensitymask.cpp
ext/voreen/src/modules/hpmc/: hpmcmodule.cpp  marchingcubesrenderer.cpp  multisurfacerenderer.cpp
ext/voreen/src/modules/ipc/: ipcmodule.cpp  ipcvolumesource.cpp  test.frag
ext/voreen/src/modules/opencl/: clwrapper.cpp  gradient.cl  grayscale.cl  grayscale_cl.cpp  openclmodule.cpp  raytracingentryexitpoints.cl  volumegradient_cl.cpp  (+3 more)
ext/voreen/src/qt/: aboutbox.cpp  helpbrowser.cpp  pch_qt.h  progressdialog.cpp  qrc_vrn_qt.cpp  versionqt.cpp  voreenapplicationqt.cpp
ext/voreen/voreenve/: main.cpp  qrc_vrn_app.cpp  voreenmainwindow.cpp  voreenmainwindow.h  voreenvisualization.cpp  voreenvisualization.h
ext/voreen/voreenve/networkeditor/: aggregationgraphicsitem.cpp  aggregationgraphicsitem.h  arrowgraphicsitem.cpp  arrowgraphicsitem.h  arrowheadselectiongraphicsitem.cpp  arrowheadselectiongraphicsitem.h  hastooltip.h  linkarrowgraphicsitem.cpp  linkarrowgraphicsitem.h  linkarrowgraphicsitemstub.cpp  linkarrowgraphicsitemstub.h  linkdialogarrowgraphicsitem.cpp  linkdialogarrowgraphicsitem.h  linkdialoggraphicsview.cpp  linkdialoggraphicsview.h  linkdialogprocessorgraphicsitem.cpp  linkdialogprocessorgraphicsitem.h  linkdialogpropertygraphicsitem.cpp  linkdialogpropertygraphicsitem.h  networkeditor.cpp  networkeditor.h  networkeditor_common.h  openpropertylistbutton.cpp  openpropertylistbutton.h  portarrowgraphicsitem.cpp  portarrowgraphicsitem.h  portgraphicsitem.cpp  portgraphicsitem.h  processorgraphicsitem.cpp  processorgraphicsitem.h  progressbargraphicsitem.cpp  progressbargraphicsitem.h  propertygraphicsitem.cpp  propertygraphicsitem.h  propertylinkdialog.cpp  propertylinkdialog.h  propertylistgraphicsitem.cpp  propertylistgraphicsitem.h  rootgraphicsitem.cpp  rootgraphicsitem.h  (+4 more)
(+917 files in other folders)
