cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(tgt)

include_directories("..")

file(
	GLOB PROJECT_SOURCES

	./model.h
	./line.h
	./memorymanager.h
	./painter.h
	./submesh.h
	./tgt_gl.h
	./renderable.h
	./types.h
	./manager.h
	./shadermanager.h
	./event/timeevent.h
	./event/mouseevent.h
	./event/exitevent.h
	./event/eventhandler.h
	./event/event.h
	./event/keyevent.h
	./event/eventlistener.h
	./texturereaderdevil.h
	./glcanvas.h
	./mesh.h
	./framebufferobject.h
	./camera.h
	./framecounter.h
	./tesselator.h
	./vector.h
	./timer.h
	./ziparchive.h
	./font.h
	./curve.h
	#./stereopainter.h
	./texturereader.h
	./texturemanager.h
	#./vertexarray.h
	./stringutil.h
	./modelreader.h
	./config.h
	./spline.h
	./singleton.h
	./attribute.h
	./bounds.h
	./light.h
	./stopwatch.h
	./plane.h
	./mouse.h
	./filesystem.h
	./glut/glutapplication.h
	./glut/glutmouse.h
	./glut/glutcanvas.h
	./glut/gluttimer.h
	./glut/tgt_glut.h
	./material.h
	./modelmanager.h
	./quadtree.h
	./math.h
	./assert.h
	./init.h
	./quaternion.h
	./toolkitfactory.h
	./vertex.h
	./navigation/navigation.h
	./navigation/trackball.h
	./logmanager.h
	./skybox.h
	./gpucapabilitieswindows.h
	./textureunit.h
	./frustum.h
	./gpucapabilities.h
	./exception.h
	./quadric.h
	./texture.h
	./ffmpeg/videoencoder.h
	./matrix.h
	./glmath.h
	./texturereadertga.h
	./guiapplication.h
	./animation/bsplineanimation.h
	./animation/abstractanimation.h
	./animation/circleanimation.h

	./bounds.cpp
	./tesselator.cpp
	./stopwatch.cpp
	./gpucapabilitieswindows.cpp
	./frustum.cpp
	./framecounter.cpp
	./camera.cpp
	./tgt_gl.cpp
	./filesystem.cpp
	./curve.cpp
	./event/eventlistener.cpp
	./event/mouseevent.cpp
	./event/eventhandler.cpp
	./event/timeevent.cpp
	./event/keyevent.cpp
	./texturemanager.cpp
	./exception.cpp
	./spline.cpp
	./memorymanager.cpp
	./init.cpp
	./gpucapabilities.cpp
	./modelreader.cpp
	./logmanager.cpp
	./textureunit.cpp
	./light.cpp
	./submesh.cpp
	./guiapplication.cpp
	./model.cpp
	./modelmanager.cpp
	./stringutil.cpp
	./font.cpp
	./texturereaderdevil.cpp
	./texturereader.cpp
	./texturereadertga.cpp
	./mesh.cpp
	./timer.cpp
	./glut/gluttimer.cpp
	./glut/glutcanvas.cpp
	./glut/glutmouse.cpp
	./glut/glutapplication.cpp
	./glut/toolkitfactory.cpp
	./texture.cpp
	./framebufferobject.cpp
	#./vertexarray.cpp
	./painter.cpp
	./skybox.cpp
	#./stereopainter.cpp
	./shadermanager.cpp
	./assert.cpp
	./navigation/navigation.cpp
	./navigation/trackball.cpp
	./ziparchive.cpp
	./ffmpeg/videoencoder.cpp
	./glcanvas.cpp
	./animation/circleanimation.cpp
	./animation/bsplineanimation.cpp

	#./qt/qttimer.cpp
	#./qt/qtcanvas.cpp
	#./qt/qtapplication.cpp

	#./qt/tgt_qt.h
	#./qt/qtcanvas.h
	#./qt/qtapplication.h
	#./qt/qttimer.h

	)

add_library(
	tgt
	${PROJECT_SOURCES}
	)
