cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
cmake_policy(SET CMP0015 NEW)
project(voreen)

add_definitions(-DVRN_MODULE_BASE)
add_definitions(-DVRN_CUSTOM_MODULE_CA)

find_package(Qt4 COMPONENTS QtCore QtGui QtOpenGL REQUIRED)
SET( QT_USE_QTOPENGL TRUE )  
INCLUDE( ${QT_USE_FILE} )

include_directories(
	".."
	"../voreen/inc/"
	"../jama/inc"
	)

link_directories(
	"../tinyxml/dep"
	"../tgt/dep"
	)

file(
	GLOB PROJECT_SOURCES

	./src/core/version.cpp
	./src/core/voreenapplication.cpp
	./src/core/properties/plotdataproperty.cpp
	./src/core/properties/shaderproperty.cpp
	./src/core/properties/condition.cpp
	./src/core/properties/link/boxobject.cpp
	./src/core/properties/link/propertylink.cpp
	./src/core/properties/link/linkevaluatorbase.cpp
	./src/core/properties/link/boxobjecthelper.cpp
	./src/core/properties/link/linkevaluatorplotselection.cpp
	./src/core/properties/link/linkevaluatorid.cpp
	./src/core/properties/link/dependencylinkevaluators.cpp
	./src/core/properties/link/linkevaluatorfactory.cpp
	./src/core/properties/link/linkevaluatoridnormalized.cpp
	./src/core/properties/link/dependencylinkevaluatorbase.cpp
	./src/core/properties/link/linkevaluatorboolinvert.cpp
	./src/core/properties/cameraproperty.cpp
	./src/core/properties/volumestreamproperty.cpp
	./src/core/properties/intproperty.cpp
	./src/core/properties/optionproperty.cpp
	./src/core/properties/colormapproperty.cpp
	./src/core/properties/colorproperty.cpp
	./src/core/properties/stringproperty.cpp
	./src/core/properties/filedialogproperty.cpp
	./src/core/properties/plotentitiesproperty.cpp
	./src/core/properties/floatproperty.cpp
	./src/core/properties/propertyowner.cpp
	./src/core/properties/propertyvector.cpp
	./src/core/properties/eventproperty.cpp
	./src/core/properties/numericproperty.cpp
	./src/core/properties/property.cpp
	./src/core/properties/transfuncproperty.cpp
	./src/core/properties/plotpredicateproperty.cpp
	./src/core/properties/volumehandleproperty.cpp
	./src/core/properties/buttonproperty.cpp
	./src/core/properties/plotselectionproperty.cpp
	./src/core/properties/vectorproperty.cpp
	./src/core/properties/boolproperty.cpp
	./src/core/properties/lightproperty.cpp
	./src/core/properties/matrixproperty.cpp
	./src/core/properties/fontproperty.cpp
	./src/core/properties/volumecollectionproperty.cpp
	./src/core/processors/imageprocessordepth.cpp
	./src/core/processors/canvasrenderer.cpp
	./src/core/processors/processorfactory.cpp
	./src/core/processors/processor.cpp
	./src/core/processors/volumeraycaster.cpp
	./src/core/processors/volumeprocessor.cpp
	./src/core/processors/renderprocessor.cpp
	./src/core/processors/volumerenderer.cpp
	./src/core/processors/geometryrendererbase.cpp
	./src/core/processors/profiling.cpp
	./src/core/processors/imageprocessor.cpp
	./src/core/processors/processorwidget.cpp
	./src/core/io/serialization/xmlserializationconstants.cpp
	./src/core/io/serialization/xmlserializer.cpp
	./src/core/io/serialization/xmlserializerbase.cpp
	./src/core/io/serialization/xmldeserializer.cpp
	./src/core/io/serialization/meta/positionmetadata.cpp
	./src/core/io/serialization/meta/metadatacontainer.cpp
	./src/core/io/serialization/meta/windowstatemetadata.cpp
	./src/core/io/serialization/meta/zoommetadata.cpp
	./src/core/io/serialization/meta/primitivemetadata.cpp
	./src/core/io/serialization/meta/aggregationmetadata.cpp
	./src/core/io/zipvolumereader.cpp
	./src/core/io/cacheindex.cpp
	./src/core/io/rawvolumereader.cpp
	./src/core/io/volumeserializerpopulator.cpp
	./src/core/io/cache.cpp
	./src/core/io/datvolumewriter.cpp
	./src/core/io/datvolumereader.cpp
	./src/core/io/textfilereader.cpp
	./src/core/io/volumewriter.cpp
	./src/core/io/brickedvolumereader.cpp
	./src/core/io/vevovolumereader.cpp
	./src/core/io/volumeserializer.cpp
	./src/core/io/visiblehumanreader.cpp
	./src/core/io/brickedvolumewriter.cpp
	./src/core/io/progressbar.cpp
	./src/core/io/volumereader.cpp
	./src/core/interaction/flythroughnavigation.cpp
	./src/core/interaction/voreentrackball.cpp
	./src/core/interaction/plotpickingmanager.cpp
	./src/core/interaction/pickingmanager.cpp
	./src/core/interaction/idmanager.cpp
	./src/core/interaction/interactionhandlerfactory.cpp
	./src/core/interaction/plotcamerainteractionhandler.cpp
	./src/core/interaction/firstpersonnavigation.cpp
	./src/core/interaction/camerainteractionhandler.cpp
	./src/core/interaction/interactionhandler.cpp
	./src/core/interaction/trackballnavigation.cpp
	./src/core/network/networkserializer.cpp
	./src/core/network/networkconverter.cpp
	./src/core/network/networkgraph.cpp
	./src/core/network/workspace.cpp
	./src/core/network/processornetworkobserver.cpp
	./src/core/network/processornetwork.cpp
	./src/core/network/networkevaluator.cpp
	./src/core/ports/coprocessorport.cpp
	./src/core/ports/volumeport.cpp
	./src/core/ports/plotport.cpp
	./src/core/ports/renderport.cpp
	./src/core/ports/textport.cpp
	./src/core/ports/port.cpp
	./src/core/plotting/plotlibrary.cpp
	./src/core/plotting/aggregationfunction.cpp
	./src/core/plotting/plotselection.cpp
	./src/core/plotting/functionlibrary.cpp
	./src/core/plotting/plotentitysettings.cpp
	./src/core/plotting/plotpredicatefactory.cpp
	./src/core/plotting/plotpredicate.cpp
	./src/core/plotting/plotcell.cpp
	./src/core/plotting/aggregationfunctionfactory.cpp
	./src/core/plotting/plotdata.cpp
	./src/core/plotting/smartlabel.cpp
	./src/core/plotting/plotfunction.cpp
	./src/core/plotting/plotbase.cpp
	./src/core/plotting/colormap.cpp
	./src/core/plotting/parser/plotfunctionlexer.cpp
	./src/core/plotting/parser/plotfunctiontoken.cpp
	./src/core/plotting/parser/plotfunctiongrammar.cpp
	./src/core/plotting/parser/plotfunctionnode.cpp
	./src/core/plotting/parser/plotfunctionparser.cpp
	./src/core/plotting/parser/plotfunctionterminals.cpp
	./src/core/plotting/parser/plotfunctionvisitor.cpp
	./src/core/plotting/plotrow.cpp
	./src/core/plotting/plotexpression.cpp
	./src/core/voreenmodule.cpp
	./src/core/datastructures/rendertarget.cpp
	./src/core/datastructures/transfunc/transfuncintensitygradient.cpp
	./src/core/datastructures/transfunc/transfuncprimitive.cpp
	./src/core/datastructures/transfunc/transfunc.cpp
	./src/core/datastructures/transfunc/transfuncfactory.cpp
	./src/core/datastructures/transfunc/transfuncintensity.cpp
	./src/core/datastructures/transfunc/transfuncmappingkey.cpp
	./src/core/datastructures/volume/volumeoperatorcreatesubset.cpp
	./src/core/datastructures/volume/volume.cpp
	./src/core/datastructures/volume/volumehandle.cpp
	./src/core/datastructures/volume/volumeoperatorresize.cpp
	./src/core/datastructures/volume/volumecontainer.cpp
	./src/core/datastructures/volume/volumeoperatorresample.cpp
	./src/core/datastructures/volume/gradient.cpp
	./src/core/datastructures/volume/volumecollection.cpp
	./src/core/datastructures/volume/histogram.cpp
	./src/core/datastructures/volume/volumegl.cpp
	./src/core/datastructures/volume/bricking/errorlodselector.cpp
	./src/core/datastructures/volume/bricking/largevolumemanager.cpp
	./src/core/datastructures/volume/bricking/brickedvolumegl.cpp
	./src/core/datastructures/volume/bricking/brickresolutioncalculator.cpp
	./src/core/datastructures/volume/bricking/cameralodselector.cpp
	./src/core/datastructures/volume/bricking/maximumbrickresolutioncalculator.cpp
	./src/core/datastructures/volume/bricking/standardbrickresolutioncalculator.cpp
	./src/core/datastructures/volume/bricking/brick.cpp
	./src/core/datastructures/volume/bricking/balancedbrickresolutioncalculator.cpp
	./src/core/datastructures/volume/bricking/brickingregion.cpp
	./src/core/datastructures/volume/bricking/bricklodselector.cpp
	./src/core/datastructures/volume/bricking/brickingregionmanager.cpp
	./src/core/datastructures/volume/bricking/brickedvolume.cpp
	./src/core/datastructures/volume/bricking/boxbrickingregion.cpp
	./src/core/datastructures/volume/modality.cpp
	./src/core/datastructures/volume/volumetexture.cpp
	./src/core/datastructures/volume/volumemetadata.cpp
	./src/core/datastructures/geometry/vertexgeometry.cpp
	./src/core/datastructures/geometry/meshlistgeometry.cpp
	./src/core/datastructures/geometry/facegeometry.cpp
	./src/core/datastructures/geometry/meshgeometry.cpp
	./src/core/datastructures/imagesequence.cpp
	./src/core/utils/observer.cpp
	./src/core/utils/voreenpainter.cpp
	./src/core/utils/stringconversion.cpp
	./src/core/utils/cmdparser/command.cpp
	./src/core/utils/cmdparser/commandlineparser.cpp
	./src/core/utils/cmdparser/command_loglevel.cpp
	./src/core/utils/GLSLparser/preprocessor/ppstatement.cpp
	./src/core/utils/GLSLparser/preprocessor/ppterminals.cpp
	./src/core/utils/GLSLparser/preprocessor/ppvisitor.cpp
	./src/core/utils/GLSLparser/preprocessor/ppmacro.cpp
	./src/core/utils/GLSLparser/preprocessor/ppparser.cpp
	./src/core/utils/GLSLparser/preprocessor/pplexer.cpp
	./src/core/utils/GLSLparser/parsetreenode.cpp
	./src/core/utils/GLSLparser/generator/parsertable.cpp
	./src/core/utils/GLSLparser/generator/glslgrammar.cpp
	./src/core/utils/GLSLparser/generator/ppgrammar.cpp
	./src/core/utils/GLSLparser/generator/grammar.cpp
	./src/core/utils/GLSLparser/generator/annotationgrammar.cpp
	./src/core/utils/GLSLparser/generator/lritem.cpp
	./src/core/utils/GLSLparser/token.cpp
	./src/core/utils/GLSLparser/terminalsmap.cpp
	./src/core/utils/GLSLparser/parseraction.cpp
	./src/core/utils/GLSLparser/glslprogram.cpp
	./src/core/utils/GLSLparser/annotations/annotationterminals.cpp
	./src/core/utils/GLSLparser/annotations/annotationvisitor.cpp
	./src/core/utils/GLSLparser/annotations/annotationlexer.cpp
	./src/core/utils/GLSLparser/annotations/annotationparser.cpp
	./src/core/utils/GLSLparser/parser.cpp
	./src/core/utils/GLSLparser/lexer.cpp
	./src/core/utils/GLSLparser/production.cpp
	./src/core/utils/GLSLparser/glsl/glslterminals.cpp
	./src/core/utils/GLSLparser/glsl/glsllexer.cpp
	./src/core/utils/GLSLparser/glsl/glslsymbol.cpp
	./src/core/utils/GLSLparser/glsl/glslvisitor.cpp
	./src/core/utils/GLSLparser/glsl/glslparser.cpp
	./src/core/utils/GLSLparser/grammarsymbol.cpp
	./src/core/animation/interpolationfunctionfactory.cpp
	./src/core/animation/animatedprocessor.cpp
	./src/core/animation/animation.cpp
	./src/core/animation/interpolation/ivec2interpolationfunctions.cpp
	./src/core/animation/interpolation/mat3interpolationfunctions.cpp
	./src/core/animation/interpolation/transfuncinterpolationfunctions.cpp
	./src/core/animation/interpolation/basicfloatinterpolation.cpp
	./src/core/animation/interpolation/quatinterpolationfunctions.cpp
	./src/core/animation/interpolation/shadersourceinterpolationfunctions.cpp
	./src/core/animation/interpolation/intinterpolationfunctions.cpp
	./src/core/animation/interpolation/basicintinterpolation.cpp
	./src/core/animation/interpolation/volumecollectioninterpolationfunctions.cpp
	./src/core/animation/interpolation/vec4interpolationfunctions.cpp
	./src/core/animation/interpolation/vec3interpolationfunctions.cpp
	./src/core/animation/interpolation/mat2interpolationfunctions.cpp
	./src/core/animation/interpolation/floatinterpolationfunctions.cpp
	./src/core/animation/interpolation/boolinterpolationfunctions.cpp
	./src/core/animation/interpolation/vec2interpolationfunctions.cpp
	./src/core/animation/interpolation/mat4interpolationfunctions.cpp
	./src/core/animation/interpolation/volumehandleinterpolationfunctions.cpp
	./src/core/animation/interpolation/ivec3interpolationfunctions.cpp
	./src/core/animation/interpolation/stringinterpolationfunctions.cpp
	./src/core/animation/interpolation/camerainterpolationfunctions.cpp
	./src/core/animation/interpolation/ivec4interpolationfunctions.cpp
	./src/core/animation/serializationfactories.cpp
	./src/core/animation/templatepropertytimeline.cpp
	./src/core/animation/propertykeyvalue.cpp
	./src/core/animation/interpolationfunction.cpp
	./src/core/animation/templatepropertytimelinestate.cpp
	./src/core/animation/interpolationfunctionbase.cpp
	#./src/modules/hpmc/hpmcmodule.cpp
	#./src/modules/hpmc/marchingcubesrenderer.cpp
	#./src/modules/hpmc/multisurfacerenderer.cpp
	#./src/modules/segy/segyvolumereader.cpp
	#./src/modules/segy/segymodule.cpp
	#./src/modules/dicom/dicomfindscu.cpp
	#./src/modules/dicom/qt/dicomdialog.cpp
	#./src/modules/dicom/dicommovescu.cpp
	#./src/modules/dicom/dicomvolumereader.cpp
	#./src/modules/dicom/dicommodule.cpp
	#./src/modules/dicom/dicomvolumewriter.cpp
	#./src/modules/tiff/tiffmodule.cpp
	#./src/modules/tiff/tiffvolumereader.cpp
	#./src/modules/triangle/trianglemodule.cpp
	#./src/modules/triangle/ext/del_impl.cpp
	#./src/modules/flowreen/flowmath.cpp
	#./src/modules/flowreen/flowslicerenderer.cpp
	#./src/modules/flowreen/flowslicerenderer3d.cpp
	#./src/modules/flowreen/flowslicerenderer2d.cpp
	#./src/modules/flowreen/flowreader.cpp
	#./src/modules/flowreen/streamlinetexture.cpp
	#./src/modules/flowreen/floworthogonalslicerenderer.cpp
	#./src/modules/flowreen/volumeoperatorflowmagnitude.cpp
	#./src/modules/flowreen/flowmagnitudes3d.cpp
	#./src/modules/flowreen/streamlinerenderer3d.cpp
	#./src/modules/flowreen/flowstreamlinestexture3d.cpp
	#./src/modules/flowreen/flow3d.cpp
	#./src/modules/flowreen/colorcodingability.cpp
	#./src/modules/flowreen/flowreenprocessor.cpp
	#./src/modules/flowreen/volumeoperatorintensitymask.cpp
	#./src/modules/flowreen/flowreenmodule.cpp
	#./src/modules/flowreen/volumeflow3d.cpp
	#./src/modules/flowreen/simpletexture.cpp
	#./src/modules/flowreen/pathlinerenderer3d.cpp
	#./src/modules/flowreen/flow2d.cpp
	#./src/modules/flowreen/converter/raw2flow/raw2flowconverter.cpp
	#./src/modules/flowreen/converter/raw2flow/raw2flow.cpp
	#./src/modules/flowreen/converter/raw2flow/stringutility.cpp
	#./src/modules/connectedcomponents/connectedcomponents3d.cpp
	#./src/modules/connectedcomponents/connectedcomponentsmodule.cpp
	#./src/modules/connectedcomponents/connectedcomponents2d.cpp
	./src/modules/base/processors/utility/imagesequenceloopfinalizer.cpp
	./src/modules/base/processors/utility/distancemeasure.cpp
	./src/modules/base/processors/utility/volumeinformation.cpp
	./src/modules/base/processors/utility/volumepicking.cpp
	./src/modules/base/processors/utility/textoverlay.cpp
	./src/modules/base/processors/utility/imagesequenceloopinitiator.cpp
	./src/modules/base/processors/utility/volumeregistration.cpp
	./src/modules/base/processors/utility/multiscale.cpp
	./src/modules/base/processors/utility/segmentationvalidation.cpp
	./src/modules/base/processors/utility/renderloopinitiator.cpp
	./src/modules/base/processors/utility/coordinatetransformation.cpp
	./src/modules/base/processors/utility/intensitymeasure.cpp
	./src/modules/base/processors/utility/clockprocessor.cpp
	./src/modules/base/processors/utility/scale.cpp
	./src/modules/base/processors/utility/imageanalyzer.cpp
	./src/modules/base/processors/utility/imageselector.cpp
	./src/modules/base/processors/utility/volumecollectionmodalityfilter.cpp
	./src/modules/base/processors/utility/renderloopfinalizer.cpp
	./src/modules/base/processors/utility/propertycontainer.cpp
	./src/modules/base/processors/utility/volumeselector.cpp
	./src/modules/base/processors/utility/renderstore.cpp
	./src/modules/base/processors/datasource/volumeseriessource.cpp
	./src/modules/base/processors/datasource/plotfunctionsource.cpp
	./src/modules/base/processors/datasource/plotdatasource.cpp
	./src/modules/base/processors/datasource/volumecollectionsource.cpp
	./src/modules/base/processors/datasource/geometrysource.cpp
	./src/modules/base/processors/datasource/imagesequencesource.cpp
	./src/modules/base/processors/datasource/volumesource.cpp
	./src/modules/base/processors/datasource/imagesource.cpp
	./src/modules/base/processors/datasource/textsource.cpp
	./src/modules/base/processors/entryexitpoints/entryexitpoints.cpp
	./src/modules/base/processors/entryexitpoints/meshentryexitpoints.cpp
	./src/modules/base/processors/volume/volumebitscale.cpp
	./src/modules/base/processors/volume/volumesave.cpp
	./src/modules/base/processors/volume/volumeinversion.cpp
	./src/modules/base/processors/volume/volumetransformation.cpp
	./src/modules/base/processors/volume/vectormagnitude.cpp
	./src/modules/base/processors/volume/volumesubset.cpp
	./src/modules/base/processors/volume/volumemorphology.cpp
	./src/modules/base/processors/volume/volumedistancetransform.cpp
	./src/modules/base/processors/volume/volumecurvature.cpp
	./src/modules/base/processors/volume/volumehalfsample.cpp
	./src/modules/base/processors/volume/volumemasking.cpp
	./src/modules/base/processors/volume/volumefiltering.cpp
	./src/modules/base/processors/volume/volumecreate.cpp
	./src/modules/base/processors/volume/volumemirror.cpp
	./src/modules/base/processors/volume/volumegradient.cpp
	./src/modules/base/processors/volume/volumeresample.cpp
	./src/modules/base/processors/volume/volumecubify.cpp
	./src/modules/base/processors/volume/volumecombine.cpp
	./src/modules/base/processors/volume/volumedecomposer.cpp
	./src/modules/base/processors/render/multivolumeraycaster.cpp
	./src/modules/base/processors/render/multiplanarslicerenderer.cpp
	./src/modules/base/processors/render/singlevolumeraycaster.cpp
	./src/modules/base/processors/render/segmentationraycaster.cpp
	./src/modules/base/processors/render/dynamicglslprocessor.cpp
	./src/modules/base/processors/render/curvatureraycaster.cpp
	./src/modules/base/processors/render/cpuraycaster.cpp
	./src/modules/base/processors/render/halfangleslicer.cpp
	./src/modules/base/processors/render/slicerendererbase.cpp
	./src/modules/base/processors/render/glslraycaster.cpp
	./src/modules/base/processors/render/idraycaster.cpp
	./src/modules/base/processors/render/singlevolumeslicer.cpp
	./src/modules/base/processors/render/rgbraycaster.cpp
	./src/modules/base/processors/render/sliceviewer.cpp
	./src/modules/base/processors/render/volumeslicer.cpp
	./src/modules/base/processors/render/simpleraycaster.cpp
	./src/modules/base/processors/image/fade.cpp
	./src/modules/base/processors/image/loopcompositor.cpp
	./src/modules/base/processors/image/median.cpp
	./src/modules/base/processors/image/imagethreshold.cpp
	./src/modules/base/processors/image/binaryimageprocessor.cpp
	./src/modules/base/processors/image/background.cpp
	./src/modules/base/processors/image/canny.cpp
	./src/modules/base/processors/image/depthdarkening.cpp
	./src/modules/base/processors/image/compositor.cpp
	./src/modules/base/processors/image/regionofinterest2d.cpp
	./src/modules/base/processors/image/edgedetect.cpp
	./src/modules/base/processors/image/mean.cpp
	./src/modules/base/processors/image/gaussian.cpp
	./src/modules/base/processors/image/labelingmath.cpp
	./src/modules/base/processors/image/labeling.cpp
	./src/modules/base/processors/image/grayscale.cpp
	./src/modules/base/processors/image/colordepth.cpp
	./src/modules/base/processors/image/imagemasking.cpp
	./src/modules/base/processors/image/erosion.cpp
	./src/modules/base/processors/image/gabor.cpp
	./src/modules/base/processors/image/nonminmaxsuppression.cpp
	./src/modules/base/processors/image/explosioncompositor.cpp
	./src/modules/base/processors/image/convolution.cpp
	./src/modules/base/processors/image/unaryimageprocessor.cpp
	./src/modules/base/processors/image/orientationoverlay.cpp
	./src/modules/base/processors/image/dilation.cpp
	./src/modules/base/processors/image/imageoverlay.cpp
	./src/modules/base/processors/image/quadview.cpp
	./src/modules/base/processors/proxygeometry/multiplanarproxygeometry.cpp
	./src/modules/base/processors/proxygeometry/cubemeshproxygeometry.cpp
	./src/modules/base/processors/proxygeometry/proxygeometry.cpp
	./src/modules/base/processors/proxygeometry/multivolumeproxygeometry.cpp
	./src/modules/base/processors/proxygeometry/cubeproxygeometry.cpp
	./src/modules/base/processors/proxygeometry/explosionproxygeometry.cpp
	./src/modules/base/processors/geometry/quadricrenderer.cpp
	./src/modules/base/processors/geometry/eepgeometryintegrator.cpp
	./src/modules/base/processors/geometry/meshslabclipping.cpp
	./src/modules/base/processors/geometry/meshclippingwidget.cpp
	./src/modules/base/processors/geometry/pointsegmentlistrenderer.cpp
	./src/modules/base/processors/geometry/geometryrenderer.cpp
	./src/modules/base/processors/geometry/lightwidgetrenderer.cpp
	./src/modules/base/processors/geometry/planewidgetprocessor.cpp
	./src/modules/base/processors/geometry/camerapositionrenderer.cpp
	./src/modules/base/processors/geometry/pointlistrenderer.cpp
	./src/modules/base/processors/geometry/isosurfaceextractor.cpp
	./src/modules/base/processors/geometry/meshclipping.cpp
	./src/modules/base/processors/geometry/boundingboxrenderer.cpp
	./src/modules/base/processors/geometry/slicepositionrenderer.cpp
	./src/modules/base/processors/geometry/depthpeelingprocessor.cpp
	./src/modules/base/processors/geometry/geometryprocessor.cpp
	#./src/modules/base/processors/plotting/graphplot.cpp
	#./src/modules/base/processors/plotting/plotprocessor.cpp
	#./src/modules/base/processors/plotting/plotdatagroup.cpp
	#./src/modules/base/processors/plotting/plotdataselect.cpp
	#./src/modules/base/processors/plotting/plotdatafitfunction.cpp
	#./src/modules/base/processors/plotting/surfaceplot.cpp
	#./src/modules/base/processors/plotting/plotfunctiondiscret.cpp
	#./src/modules/base/processors/plotting/plotdataexport.cpp
	#./src/modules/base/processors/plotting/barplot.cpp
	#./src/modules/base/processors/plotting/lineplot.cpp
	#./src/modules/base/processors/plotting/plotdatamerge.cpp
	#./src/modules/base/processors/plotting/scatterplot.cpp
	./src/modules/base/io/interfilevolumereader.cpp
	./src/modules/base/io/multivolumereader.cpp
	./src/modules/base/io/analyzevolumereader.cpp
	./src/modules/base/io/philipsusvolumereader.cpp
	./src/modules/base/io/nrrdvolumereader.cpp
	./src/modules/base/io/nrrdvolumewriter.cpp
	./src/modules/base/io/tuvvolumereader.cpp
	./src/modules/base/io/quadhidacvolumereader.cpp
	./src/modules/base/basemodule.cpp
	#./src/modules/python/pythonmodule.cpp
	#./src/modules/python/qt/pythoneditor.cpp
	#./src/modules/python/qt/pyvoreenqt.cpp
	#./src/modules/python/qt/pythonhighlighter.cpp
	#./src/modules/python/pythonscript.cpp
	#./src/modules/python/pyvoreen.cpp
	#./src/modules/opencl/grayscale_cl.cpp
	#./src/modules/opencl/openclmodule.cpp
	#./src/modules/opencl/raytracingentryexitpoints.cpp
	#./src/modules/opencl/clwrapper.cpp
	#./src/modules/opencl/voreenblas.cpp
	#./src/modules/opencl/volumegradient_cl.cpp
	#./src/modules/pvm/pvmvolumereader.cpp
	#./src/modules/pvm/ddsbase.cpp
	#./src/modules/pvm/pvmmodule.cpp

	# Qt
	./src/qt/voreenapplicationqt.cpp
	./src/qt/progressdialog.cpp
	./src/qt/widgets/labelingwidgetqt.cpp
	./src/qt/pch_qt.h
	./src/qt/qrc_vrn_qt.cpp
	./src/qt/versionqt.cpp

	# Custom modules
	./src/modules/ca/camodule.cpp
	./src/modules/ca/cavolumeprocessor.cpp
	)

add_library(
	voreen
	${PROJECT_SOURCES}
	)

target_link_libraries(
	voreen
	tgt
	tinyxml
	${QT_LIBRARIES}
	)
